--- a/index.html
+++ b/index.html
@@ -16,7 +16,33 @@
         <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        
+        <div class="top">
+        <header>
+            <h2>Header Logo</h2>
+            <ul>
+                <li>header link one</li>
+                <li>header link two</li>
+                <li>header link three</li>
+            </ul>
+        </header>
+        <div class ="container">
+                <img src="images/op.jpeg" class="images" alt="Strawhat" width= 450px length= 250px>
+            <div class="sub">
+            <h1>
+                This website is awesome
+            </h1>
+            <p>
+                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast.
+            </p>
+            
+            <button>Sign Up</button>
+        </div>
+        </div>
+    </div>
+    <div class="middle">
+        <h3 style="color: black; text-align: center;">Some Random Information.</h3>
+
+    </div>
         <script src="" async defer></script>
     </body>
 </html>
