Style Crew Images
added images and styled them

--- a/index.html
+++ b/index.html
@@ -34,14 +34,19 @@
             <p>
                 This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast.
             </p>
-            
+
             <button>Sign Up</button>
         </div>
         </div>
     </div>
     <div class="middle">
         <h3 style="color: black; text-align: center;">Some Random Information.</h3>
-
+        <div class = "crew">
+        <img src = "images/sanji.jpeg" class = "crew_images" alt="cook" />
+        <img src = "images/usopp.png" class = "crew_images" alt="sniper" />
+        <img src = "images/chopper.jpeg" class = "crew_images" alt="doctor" />
+        <img src = "images/brook.jpeg" class = "crew_images" alt="musician" />
+      </div>
     </div>
         <script src="" async defer></script>
     </body>
