--- a/index.html
+++ b/index.html
@@ -40,13 +40,23 @@
         </div>
     </div>
     <div class="middle">
-        <h3 style="color: black; text-align: center;">Some Random Information.</h3>
+        <h3 style="color: black; text-align: center; margin-top: 0px;">Straw Hat Crew</h3>
         <div class = "crew">
         <img src = "images/sanji.jpeg" class = "crew_images" alt="cook" />
         <img src = "images/usopp.png" class = "crew_images" alt="sniper" />
         <img src = "images/chopper.jpeg" class = "crew_images" alt="doctor" />
         <img src = "images/brook.jpeg" class = "crew_images" alt="musician" />
       </div>
+    </div>
+    <div class = "quote">
+      <h3>"I’m going to be the pirate king!!"</h3>
+
+      <p>
+        -- Monkey D. Luffy
+      </p>
+    </div>
+    <div class = "signup">
+
     </div>
         <script src="" async defer></script>
     </body>
