--- a/index.html
+++ b/index.html
@@ -4,60 +4,74 @@
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
 <!--[if gt IE 8]>      <html class="no-js"> <!--<![endif]-->
 <html>
-    <head>
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <title></title>
-        <meta name="description" content="">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="css/main.css">
-    </head>
-    <body>
-        <!--[if lt IE 7]>
+
+<head>
+  <meta charset="utf-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <title></title>
+  <meta name="description" content="">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="css/main.css">
+</head>
+
+<body>
+  <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-        <div class="top">
-        <header>
-            <h2>Header Logo</h2>
-            <ul>
-                <li>header link one</li>
-                <li>header link two</li>
-                <li>header link three</li>
-            </ul>
-        </header>
-        <div class ="container">
-                <img src="images/op.jpeg" class="images" alt="Strawhat" width= 450px length= 250px>
-            <div class="sub">
-            <h1>
-                This website is awesome
-            </h1>
-            <p>
-                This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast.
-            </p>
+  <div class="top">
+    <header>
+      <h2>Header Logo</h2>
+      <ul>
+        <li>header link one</li>
+        <li>header link two</li>
+        <li>header link three</li>
+      </ul>
+    </header>
+    <div class="container">
+      <img src="images/op.jpeg" class="images" alt="Strawhat" width=450px length=250px>
+      <div class="sub">
+        <h1>
+          This website is awesome
+        </h1>
+        <p>
+          This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast.
+        </p>
 
-            <button>Sign Up</button>
-        </div>
-        </div>
-    </div>
-    <div class="middle">
-        <h3 style="color: black; text-align: center; margin-top: 0px;">Straw Hat Crew</h3>
-        <div class = "crew">
-        <img src = "images/sanji.jpeg" class = "crew_images" alt="cook" />
-        <img src = "images/usopp.png" class = "crew_images" alt="sniper" />
-        <img src = "images/chopper.jpeg" class = "crew_images" alt="doctor" />
-        <img src = "images/brook.jpeg" class = "crew_images" alt="musician" />
+        <button>Sign Up</button>
       </div>
     </div>
-    <div class = "quote">
-      <h3>"I’m going to be the pirate king!!"</h3>
+  </div>
+  <div class="middle">
+    <h3 style="color: black; text-align: center; margin-top: 0px;">Straw Hat Crew</h3>
+    <div class="crew">
+      <img src="images/sanji.jpeg" class="crew_images" alt="cook" />
+      <img src="images/usopp.png" class="crew_images" alt="sniper" />
+      <img src="images/chopper.jpeg" class="crew_images" alt="doctor" />
+      <img src="images/brook.jpeg" class="crew_images" alt="musician" />
+    </div>
+  </div>
+  <div class="quote">
+    <h3>"I’m going to be the pirate king!!"</h3>
 
-      <p>
-        -- Monkey D. Luffy
+    <p>
+      -- Monkey D. Luffy --
+    </p>
+  </div>
+  <div class="bottom">
+    <div class="signup">
+      <div class = "text">
+      <h2 style="font-size: 20px;"> Call to action it's time!</h2>
+      <p style="margin-top: 3px;font-size: 15px; font-weight: lighter; font-style: italic">
+        Click the button on the left to join the crew!!
       </p>
+      </div>
+      <button class="join">Join Now! </button>
     </div>
-    <div class = "signup">
+  </div>
+  <div class= "footer">
+     Copyright © <a href="https://github.com/dlvriana">dlvriana</a> 2022
+  </div>
+  <script src="" async defer></script>
+</body>
 
-    </div>
-        <script src="" async defer></script>
-    </body>
 </html>
