--- a/index.html
+++ b/index.html
@@ -18,58 +18,81 @@
   <!--[if lt IE 7]>
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
-  <div class="top">
+  <div class="top" id="captain">
     <header>
-      <h2>Header Logo</h2>
+      <h2>The Straw Hats 🏴‍☠️ </h2>
       <ul>
-        <li>header link one</li>
-        <li>header link two</li>
-        <li>header link three</li>
+        <li><a href="#captain">The Captain</a></li>
+        <li><a href="#crew">The Crew</a></li>
+        <li><a href="#goal">The Goal</a></li>
+        <li><a href="#join">Join Now</a></li>
       </ul>
     </header>
     <div class="container">
       <img src="images/op.jpeg" class="images" alt="Strawhat" width=450px length=250px>
       <div class="sub">
         <h1>
-          This website is awesome
+          The Captain
         </h1>
         <p>
-          This website has some subtext that goes here under the main title. It's a smaller font and the color is lower in contrast.
+          The captain of the Straw Hats is none other than Monkey D. Luffy, the future King of the Pirates.
         </p>
 
-        <button>Sign Up</button>
+        <button><a href="https://onepiece.fandom.com/wiki/Monkey_D._Luffy" target="_blank"> Learn More</a></button>
       </div>
     </div>
   </div>
-  <div class="middle">
+  <div class="middle" id="crew">
     <h3 style="color: black; text-align: center; margin-top: 0px;">Straw Hat Crew</h3>
     <div class="crew">
-      <img src="images/sanji.jpeg" class="crew_images" alt="cook" />
-      <img src="images/usopp.png" class="crew_images" alt="sniper" />
-      <img src="images/chopper.jpeg" class="crew_images" alt="doctor" />
-      <img src="images/brook.jpeg" class="crew_images" alt="musician" />
+      <div class="crew">
+        <div>
+          <a href="https://onepiece.fandom.com/wiki/Sanji" target="_blank"><img src="images/sanji.jpeg" class="crew_images" alt="cook" /></a>
+          <p>
+            The Cook
+          </p>
+        </div>
+        <div>
+          <a href="https://onepiece.fandom.com/wiki/Usopp" target="_blank"><img src="images/usopp.png" class="crew_images" alt="sniper" /></a>
+          <p>
+            The Sniper
+          </p>
+        </div>
+        <div>
+          <a href="https://onepiece.fandom.com/wiki/Tony_Tony_Chopper" target="_blank"><img src="images/chopper.jpeg" class="crew_images" alt="doctor"  /></a>
+          <p>
+            The Doctor
+          </p>
+        </div>
+        <div>
+          <a href="https://onepiece.fandom.com/wiki/Brook" target="_blank"><img src="images/brook.jpeg" class="crew_images" alt="musician" /></a>
+          <p>
+            The Musician
+          </p>
+        </div>
+      </div>
     </div>
   </div>
-  <div class="quote">
+  <div class="quote" id="goal">
     <h3>"I’m going to be the pirate king!!"</h3>
 
     <p>
       -- Monkey D. Luffy --
     </p>
   </div>
-  <div class="bottom">
+  <div class="bottom" id="join">
     <div class="signup">
-      <div class = "text">
-      <h2 style="font-size: 20px;"> Call to action it's time!</h2>
-      <p style="margin-top: 3px;font-size: 15px; font-weight: lighter; font-style: italic">
-        Click the button on the left to join the crew!!
-      </p>
+      <div class="text">
+        <h2 style="font-size: 20px;"> Call to action it's time!</h2>
+        <p style="margin-top: 3px;font-size: 15px; font-weight: lighter;">
+          Click the button on the left to join the crew!!
+        </p>
       </div>
-      <button class="join">Join Now! </button>
+      <button class="join"><a href="https://forms.gle/uouubMW4deGum4436" target="_blank"> Join Now! </a></button>
     </div>
   </div>
-  <div class= "footer">
-     Copyright © <a href="https://github.com/dlvriana">dlvriana</a> 2022
+  <div class="footer">
+    Copyright © <a href="https://github.com/dlvriana" target="_blank">dlvriana</a> 2022
   </div>
   <script src="" async defer></script>
 </body>
