--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <![endif]-->
   <div class="top" id="captain">
     <header>
-      <h2>The Straw Hats 🏴‍☠️ </h2>
+      <h2 style="padding-left:35px">The Straw Hats 🏴‍☠️ </h2>
       <ul>
         <li><a href="#captain">The Captain</a></li>
         <li><a href="#crew">The Crew</a></li>
