Update github profile link

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     </div>
   </div>
   <div class="footer">
-    Copyright © <a href="https://github.com/dlvriana" target="_blank">dlvriana</a> 2022
+    Copyright © <a href="https://github.com/dvelazq1" target="_blank">dvelazq1</a> 2022
   </div>
   <script src="" async defer></script>
 </body>
